# evac

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE
inc/: tokenizer.h
src/: ast.rs  interpreter.rs  lexer.rs  main.c  main.rs  tokenizer.c  tokenizer.rs
